feat: added functionality
