# openapi3.yaml
@@ -26,7 +26,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/internalError'
-  /create/roi:
+  /export:
     post:
       tags:
         - createGpkg
@@ -59,6 +59,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error'
+        '409':
+          description: Duplicate Export Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
         '500':
           description: Internal Server Error
           content:
@@ -71,7 +77,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/error'
-  /taskStatus/{jobId}:
+  /tasks/taskStatus/{jobId}:
     get:
       tags:
         - tasks
